# galvanic

./: .gitattributes  Galvanic.kpf.komodoproject  LICENSE  README.md
apache-mod-galvanic/: CMakeLists.txt  GalvanicHandler.cpp  GalvanicHandler.h  a2mod_main.cpp
framework/: CMakeLists.txt  install_dependencies  rebuild
framework/include/: REST.hpp  cli_help.h  cli_help.php  cli_php.h  cli_request.h  cli_settings.h  commandline.h  db.h  galvanic.h  new_file_template.h  orm.h  s3.h  session.h  settings.h  stopwatch.hpp  version.h  zerotypes.h
framework/sources/: cli_php.cpp  commandline.cpp  db.cpp  main.cpp  s3.cpp  session.cpp  zerotypes.cpp
php-galvanic/: example.php
